--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -942,6 +942,35 @@ ol.nav-site{
     from {transform:scale(0)}
     to {transform:scale(1)}
   }
+
+  .container-talles{
+    position: fixed;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 95%);
+    width:100%;
+    height: 100%;
+    z-index:30;
+    top:0;
+    left: 0;
+    display: none;
+    justify-content: center;
+    align-items:center
+}
+.close-talles{
+    position:absolute;
+    color: white;
+    font-size: 30px;
+    top: 2%;
+    right: 5%;
+    cursor:pointer;
+}
+.image-talles{
+    margin-top: auto;
+    margin: 2%;
+    width: 50%;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
   
 
 /*MAIN NEW PRODUCT*/
