--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -105,12 +105,25 @@
             <% } %>
         </section>
 
-        <section class="marcas">
+        <section class="marcas block-marks">
             <div class="title">
                 <h2 class="linea"><span>COMPRÁ POR MARCA</span></h2>
             </div>
             <div class="images padding">
-                <i class="fas fa-chevron-left previous icons-marca"></i>
+                <a href="/search?search=NIKE" class="marca_img"><img src="images/marca-nike.png" alt="Nike"
+                        class="marca_int"></a>
+                <a href="/search?search=ADIDAS" class="marca_img"><img src="images/marca-adidas.png" alt="Adidas"
+                        class="marca_int"></a>
+                <a href="/search?search=PUMA" class="marca_img"><img src="images/marca-puma.png" alt="Puma"
+                        class="marca_int"></a>
+            </div>
+        </section>
+
+        <section class="marcas none-marks">
+            <div class="title">
+                <h2 class="linea"><span>COMPRÁ POR MARCA</span></h2>
+            </div>
+            <div class="images padding">
                 <a href="/search?search=NIKE" class="marca_img"><img src="images/marca-nike.png" alt="Nike"
                         class="marca_int"></a>
                 <a href="/search?search=ADIDAS" class="marca_img"><img src="images/marca-adidas.png" alt="Adidas"
@@ -118,14 +131,12 @@
                 <a href="/search?search=PUMA" class="marca_img"><img src="images/marca-puma.png" alt="Puma"
                         class="marca_int"></a>
                 <a href="/search?search=CONVERSE" class="marca_img"><img src="images/marca-converse.png" alt="Converse"
-                        class="marca_int none"></a>
+                        class="marca_int none1"></a>
                 <a href="/search?search=VANS" class="marca_img"><img src="images/marca-vans.png" alt="Vans"
                         class="marca_int none1"></a>
                 <a href="/search?search=NEW BALANCE" class="marca_img"><img src="images/marca-newbalance.png"
                         alt="Newbalance" class="marca_int none2"></a>
-                <i class="fas fa-chevron-right post icons-marca"></i>
             </div>
-
         </section>
 
 
